Adding latest changes to bbtautau chapter

--- a/backmatter.tex
+++ b/backmatter.tex
@@ -10,7 +10,7 @@
 %\listoffigures
 %\listoftables
 
-\Chapter*{List of Acronyms}
+\chapter*{List of Acronyms}
 \addcontentsline{toc}{chapter}{List of Acronyms}
 \begin{acronym}[CERN]
 \acro{MC}[MC]{Monte Carlo}
