Removing table option

--- a/Hhh/Hhh.tex
+++ b/Hhh/Hhh.tex
@@ -787,7 +787,7 @@ interpretation the assumption that \mA = \mH = \mHplus = $300$~GeV, and \mh = $1
 The couplings of the Higgs bosons to quarks and leptons, and of heavy Higgs bosons to other
 particles, are defined by $\alpha$ and $\beta$, as in table \ref{tab:hhh_2HDM_couplings}.
 
-\begin{table}[htdp]
+\begin{table}[htp]
 \begin{center}
 \caption{Couplings in the type II 2HDM}
 \begin{tabular}{@{}ll@{}}
